@@ -2,7 +2,7 @@
 # Kernel/System/Stats.pm - all stats core functions
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: Stats.pm,v 1.59 2009/01/26 09:39:32 tr Exp $
+# $Id: Stats.pm,v 1.60 2009/01/26 11:44:13 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -20,7 +20,7 @@ use Kernel::System::XML;
 use Kernel::System::Encode;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.59 $) [1];
+$VERSION = qw($Revision: 1.60 $) [1];
 
 =head1 SYNOPSIS
 
@@ -1384,15 +1384,13 @@ sub GenerateDynamicStats {
         $Title .= " $TitleTimeStart-$TitleTimeStop";
     }
 
-    # search for a better way to cache stats (StatID and Cache)
-    if ( $Param{Cache} ) {
-        my $MD5Key = $Self->{MainObject}->FilenameCleanUp(
-            Filename => $TitleTimeStart . "-" . $TitleTimeStop,
-            Type     => 'md5',
-        );
+    # create the cache string
+    my $CacheString = $Self->_GetCacheString( %Param );
 
+    # take the cache value if configured and available
+    if ( $Param{Cache} ) {
         my @StatArray = $Self->_GetResultCache(
-            Filename => 'Stats' . $Param{StatID} . '-' . $MD5Key . '.cache',
+            Filename => 'Stats' . $Param{StatID} . '-' . $CacheString . '.cache',
         );
 
         return @StatArray if @StatArray;
@@ -1481,16 +1479,9 @@ sub GenerateDynamicStats {
         return @StatArray;
     }
 
-    # search for a better way to cache stats (StatID and Cache)
-
-    my $MD5Key = $Self->{MainObject}->FilenameCleanUp(
-        Filename => $TitleTimeStart . "-" . $TitleTimeStop,
-        Type     => 'md5',
-    );
-
     # write the stats cache
     $Self->_SetResultCache(
-        Filename => 'Stats' . $Param{StatID} . '-' . $MD5Key . '.cache',
+        Filename => 'Stats' . $Param{StatID} . '-' . $CacheString . '.cache',
         Result   => \@StatArray,
     );
     return @StatArray;
@@ -2987,7 +2978,7 @@ sub StatsInstall {
 
 uninstalls stats
 
-    my $Result = $CodeObject->StatsUninstall(
+    my $Result = $StatsObject->StatsUninstall(
         FilePrefix => 'FAQ',  # (optional)
     );
 
@@ -3026,7 +3017,7 @@ sub StatsUninstall {
 
 removed stats with not existing backend file
 
-    my $Result = $CodeObject->StatsCleanUp();
+    my $Result = $StatsObject->StatsCleanUp();
 
 =cut
 
@@ -3060,6 +3051,43 @@ sub StatsCleanUp {
     return 1;
 }
 
+# =item _GetCacheString()
+#
+# return the cache string
+#
+#     my $Result = $StatsObject->_GetCacheString(
+#         UseAsXvalue      => $UseAsXvalueRef
+#         UseAsValueSeries => $UseAsValueSeriesRef,
+#         UseAsRestriction => $UseAsRestrictionRef,
+#     );
+#
+# =cut
+
+sub _GetCacheString {
+    my ( $Self, %Param ) = @_;
+    my $CacheString = '';
+
+    for my $Use (qw(UseAsXvalue UseAsValueSeries UseAsRestriction)) {
+        USEREF:
+        for my $UseRef ( @{$Param{$Use}} ) {
+            $CacheString .= '__' . $UseRef->{Name} . '_';
+            if ( $UseRef->{SelectedValues} ) {
+                $CacheString .= join ('_', sort @{$UseRef->{SelectedValues}})
+            }
+            elsif ($UseRef->{TimeStart} && $UseRef->{TimeStop}) {
+                $CacheString .=  $UseRef->{TimeStart} .'-'. $UseRef->{TimeStop};
+            }
+        }
+    }
+
+    my $MD5Key = $Self->{MainObject}->FilenameCleanUp(
+        Filename => $CacheString,
+        Type     => 'md5',
+    );
+
+    return $MD5Key;
+}
+
 1;
 
 =back
@@ -3074,6 +3102,6 @@ did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 
 =head1 VERSION
 
-$Revision: 1.59 $ $Date: 2009/01/26 09:39:32 $
+$Revision: 1.60 $ $Date: 2009/01/26 11:44:13 $
 
 =cut
